// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<ArticleCard /> by default matches with snapshot 1`] = `
<div
  className="sc-fzolEj iXLwLG k-Card k-Card--light k-Card--withoutBoxShadowOnHover"
  href={null}
  onClick={[Function]}
>
  <div
    className="sc-AxjAm gQibUD k-Card__imageContainer"
  >
    <img
      alt=""
      backgroundColor="#d8d8d8"
      className="k-Card__image"
      src="https://placehold.it/350x200/caf4fe/caf4fe"
    />
  </div>
  <div
    className="sc-AxirZ eUGgwe"
  >
    <div
      className="k-u-margin-top-single"
    >
      <span
        className="k-ButtonImage k-ButtonImage--withoutPointerEvents sc-AxiKw lnWuCm"
        tabIndex={null}
      >
        <img
          alt=""
          className="k-ButtonImage__img"
          src="https://placehold.it/100x100/caf4fe/caf4fe"
        />
      </span>
    </div>
    <div
      className="sc-AxhCb kGOGkB"
    >
      <div
        className="k-u-color-font1 k-u-size-micro k-u-weight-regular sc-AxhUy kMyssT"
      >
        
      </div>
      <div
        className="k-u-color-font1 k-u-size-micro k-u-weight-light sc-AxgMl fFPQpl"
      >
        
      </div>
    </div>
  </div>
  <div
    className="sc-fzqBkg gOTAsm"
  >
    
    
    
    
  </div>
  
  
</div>
`;

exports[`<ArticleCard /> with articleTitle and articleSubTitle props matches with snapshot 1`] = `
<div
  className="sc-fzolEj iXLwLG k-Card k-Card--light k-Card--withoutBoxShadowOnHover"
  href={null}
  onClick={[Function]}
>
  <div
    className="sc-AxjAm gQibUD k-Card__imageContainer"
  >
    <img
      alt=""
      backgroundColor="#d8d8d8"
      className="k-Card__image"
      src="https://placehold.it/350x200/caf4fe/caf4fe"
    />
  </div>
  <div
    className="sc-AxirZ eUGgwe"
  >
    <div
      className="k-u-margin-top-single"
    >
      <span
        className="k-ButtonImage k-ButtonImage--withoutPointerEvents sc-AxiKw lnWuCm"
        tabIndex={null}
      >
        <img
          alt=""
          className="k-ButtonImage__img"
          src="https://placehold.it/100x100/caf4fe/caf4fe"
        />
      </span>
    </div>
    <div
      className="sc-AxhCb kGOGkB"
    >
      <div
        className="k-u-color-font1 k-u-size-micro k-u-weight-regular sc-AxhUy kMyssT"
      >
        
      </div>
      <div
        className="k-u-color-font1 k-u-size-micro k-u-weight-light sc-AxgMl fFPQpl"
      >
        
      </div>
    </div>
  </div>
  <div
    className="sc-fzqBkg gOTAsm"
  >
    <div
      className="sc-AxmLO cDRRfW"
    >
      <p
        className="sc-AxheI cQdtyY sc-fzozJi fCtUMs k-Card__title"
      >
        Custom title
      </p>
    </div>
    
    <div
      className="sc-fzqBZW floAqh"
    >
      <span
        className="sc-fznZeY kSeEaV sc-fzqNJr fYezoV"
      />
      <p
        className="k-u-color-font1 k-u-size-micro k-u-weight-regular sc-fzoyAV chNsRt"
      >
        <span
          className="sc-fzokOt karMXD"
          width={0}
        >
          <span />
          <span>
            Custom subtitle
          </span>
          <span
            style={
              Object {
                "left": 0,
                "position": "fixed",
                "top": 0,
                "visibility": "hidden",
              }
            }
          >
            …
          </span>
        </span>
      </p>
    </div>
    
  </div>
  
  
</div>
`;

exports[`<ArticleCard /> with ignored props matches with snapshot 1`] = `
<div
  className="sc-fzolEj iXLwLG k-Card k-Card--light k-Card--withoutBoxShadowOnHover"
  href={null}
  onClick={[Function]}
>
  <div
    className="sc-AxjAm gQibUD k-Card__imageContainer"
  >
    <img
      alt=""
      backgroundColor="#d8d8d8"
      className="k-Card__image"
      src="https://placehold.it/350x200/caf4fe/caf4fe"
    />
  </div>
  <div
    className="sc-AxirZ eUGgwe"
  >
    <div
      className="k-u-margin-top-single"
    >
      <span
        className="k-ButtonImage k-ButtonImage--withoutPointerEvents sc-AxiKw lnWuCm"
        tabIndex={null}
      >
        <img
          alt=""
          className="k-ButtonImage__img"
          src="https://placehold.it/100x100/caf4fe/caf4fe"
        />
      </span>
    </div>
    <div
      className="sc-AxhCb kGOGkB"
    >
      <div
        className="k-u-color-font1 k-u-size-micro k-u-weight-regular sc-AxhUy kMyssT"
      >
        
      </div>
      <div
        className="k-u-color-font1 k-u-size-micro k-u-weight-light sc-AxgMl fFPQpl"
      >
        
      </div>
    </div>
  </div>
  <div
    className="sc-fzqBkg gOTAsm"
  >
    
    
    
    
  </div>
  
  
</div>
`;

exports[`<ArticleCard /> with some props matches with snapshot 1`] = `
<a
  className="sc-fzolEj iXLwLG k-Card k-Card--light k-Card--withoutBoxShadowOnHover"
  href="#foobar"
  onClick={[Function]}
>
  <div
    className="sc-AxjAm gQibUD k-Card__imageContainer"
  >
    <img
      alt="Image alt"
      backgroundColor="#d8d8d8"
      className="k-Card__image"
      color="#333"
      src="#image"
    />
  </div>
  <div
    className="sc-AxirZ eUGgwe"
  >
    <div
      className="k-u-margin-top-single"
    >
      <span
        className="k-ButtonImage k-ButtonImage--withoutPointerEvents sc-AxiKw lnWuCm"
        tabIndex={null}
      >
        <img
          alt="Avatar alt"
          className="k-ButtonImage__img"
          src="#avatar"
        />
      </span>
    </div>
    <div
      className="sc-AxhCb kGOGkB"
    >
      <div
        className="k-u-color-font1 k-u-size-micro k-u-weight-regular sc-AxhUy kMyssT"
      >
        Custom title
      </div>
      <div
        className="k-u-color-font1 k-u-size-micro k-u-weight-light sc-AxgMl fFPQpl"
      >
        Custom description
      </div>
    </div>
  </div>
  <div
    className="sc-fzqBkg gOTAsm"
  >
    <div
      className="sc-AxmLO cDRRfW"
    >
      <p
        className="sc-AxheI cQdtyY sc-fzozJi fCtUMs k-Card__title"
      >
        Custom title
      </p>
    </div>
    
    <div
      className="sc-fzqBZW floAqh"
    >
      <span
        className="sc-fznZeY kSeEaV sc-fzqNJr fYezoV"
      />
      <p
        className="k-u-color-font1 k-u-size-micro k-u-weight-regular sc-fzoyAV chNsRt"
      >
        <span
          className="sc-fzokOt karMXD"
          width={0}
        >
          <span />
          <span>
            Custom subtitle
          </span>
          <span
            style={
              Object {
                "left": 0,
                "position": "fixed",
                "top": 0,
                "visibility": "hidden",
              }
            }
          >
            …
          </span>
        </span>
      </p>
    </div>
    
  </div>
  
  
</a>
`;
